# rh-agent-gemini

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
dados_rh/: codigo_conduta.txt  politica_ferias.txt  politica_home_office.txt
docs/: execucoes-antigravity.md  guia-deploy-aws.md  ideia-inicial.md  linkedin.md  plano-desenvolvimento.md
src/: app.py  ingest.py
